--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header1></app-header1>
 
 <!-- <app-contactus></app-contactus>   -->
- <app-body></app-body>    
+<!--<app-body></app-body>    -->
 <!-- <app-about></app-about> -->
 <app-footer></app-footer> 
 
